--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div>
 
           <div class="col-2-lg col-6-md media_link btn">
-            <a href="https://www.mixcloud.com/t-king/" target="_blank">
+            <a href="./" target="_blank">
               <div class="row">
                 <div class="col-8 d-flex justify-content-start">
                   <h3 class="m-0 pt-2 text-white">Mixcloud</h3>
