--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,8 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
+    <!-- Bootstrap Icons CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
     <!-- My CSS -->
     <link rel="stylesheet" href="./css/style.css" />
@@ -123,17 +124,17 @@
               <h2 class="mb-lg-4"><i class="fa-solid fa-asterisk mr-2"></i> Skills</h2>
 
               <h5>Web Apllications</h5>
-              <div class="skills-list mb-2 mb-lg-4">
+              <div class="skills-list mb-2 mb-lg-4 ml-lg-2">
                 <span class="skill" data-toggle="tooltip" title="Angular"><i class="fa-brands fa-angular"></i></span>
                 <span class="skill" data-toggle="tooltip" title="Vue.JS"><i class="fa-brands fa-vuejs"></i></span>
                 <span class="skill" data-toggle="tooltip" title="Node.JS"><i class="mr-1 fa-brands fa-node-js"></i></span>
                 <span class="skill" data-toggle="tooltip" title="Bootstrap 4"><i class="bi bi-bootstrap-fill"></i></span>
-                <span class="skill" data-toggle="tooltip" title="MongoDB"><img class="mb-2" src="./images/svg/mongo.svg" /></span>
+                <span class="skill ml-0" data-toggle="tooltip" title="MongoDB"><img class="mb-2" src="./images/svg/mongo.svg" /></span>
                 <span class="skill" data-toggle="tooltip" title="Spring Boot"><img src="./images/svg/spring boot.svg" /></span>
               </div>
 
               <h5>Mobile Apps & Deployment Tools</h5>
-              <div class="skills-list mb-2 mb-lg-4 ml-2">
+              <div class="skills-list mb-2 mb-lg-4 ml-2 ml-lg-3">
                 <span class="skill" data-toggle="tooltip" title="Android Studio"><img src="./images/svg/android.svg" /></span>
                 <span class="skill" data-toggle="tooltip" title="Ionic"><img src="./images/svg/ionic.svg" /></span>
                 <span class="skill" data-toggle="tooltip" title="Jenkins"><img src="./images/svg/jenkins.svg" /></span>
@@ -141,7 +142,7 @@
               </div>
 
               <h5>Collaborative tools</h5>
-              <div class="skills-list mb-2 mb-lg-4 ml-2">
+              <div class="skills-list mb-2 mb-lg-4 ml-2 ml-lg-3">
                 <span class="skill" data-toggle="tooltip" title="Azure Devops"><img src="./images/svg/azure.svg" /></span>
                 <span class="skill" data-toggle="tooltip" title="Jira & Confuence"><img src="./images/svg/atlassian_jira.svg" class="logo" /></span>
                 <span class="skill" data-toggle="tooltip" title="GitHub"><img src="./images/svg/github.svg" /></span>
@@ -150,7 +151,7 @@
               </div>
 
               <h5>Adobe Suite</h5>
-              <div class="skills-list mb-2 mb-lg-4 ml-2">
+              <div class="skills-list mb-2 mb-lg-4 ml-2 ml-lg-3">
                 <span class="skill" data-toggle="tooltip" title="Adobe Photoshop"><img src="./images/svg/Photoshop_Adobe.svg" /></span>
                 <span class="skill" data-toggle="tooltip" title="Adobe Illustrator"><img src="./images/svg/Illustrator_Adobe.svg" /></span>
                 <span class="skill" data-toggle="tooltip" title="Adobe Lightroom"><img src="./images/svg/Lightroom_Adobe.svg" /></span>
@@ -180,18 +181,42 @@
                   >)
                 </div>
               </div>
+
+              <div class="row ml-2 mb-2">
+                <div class="col-2 p-0 m-auto"><i class="fa-solid fa-certificate fa-2xl"></i></div>
+                <div class="col p-0">
+                  Green IT - Software Engineer <br />
+                  (<a href="./files/Green IT - Software Engineer Certif. Florian SIMBA.pdf" target="_blank"> Capgemini University Certificate </a>)
+                </div>
+              </div>
+
+              <div class="row ml-2 mb-2">
+                <div class="col-2 p-0 m-auto"><i class="fa-solid fa-certificate fa-2xl"></i></div>
+                <div class="col p-0">
+                  Cybersecurity Assessment <br />
+                  (<a href="./files/Cybersecurity Assessment Certif. Florian SIMBA.pdf" target="_blank"> Capgemini University Certificate </a>)
+                </div>
+              </div>
+
+              <div class="row ml-2 mb-2">
+                <div class="col-2 p-0 m-auto"><i class="fa-solid fa-certificate fa-2xl"></i></div>
+                <div class="col p-0">
+                  Aerospace & Defense Industry <br />
+                  (<a href="./files/Aerospace & Defense Industry Certif. Florian SIMBA.pdf" target="_blank"> Capgemini University Certificate </a>)
+                </div>
+              </div>
               <hr />
 
               <h2 class="mb-lg-4"><i class="fa-solid fa-language"></i> Languages</h2>
 
               <h6>English</h6>
               <div class="progress mb-3">
-                <div class="progress-bar" style="width: 75%">75%</div>
+                <div class="progress-bar pt-1" style="width: 75%">75%</div>
               </div>
 
               <h6>French</h6>
               <div class="progress mb-3">
-                <div class="progress-bar" style="width: 95%">95%</div>
+                <div class="progress-bar pt-1" style="width: 95%">95%</div>
               </div>
               <hr />
 
@@ -213,7 +238,7 @@
           <!-- Education -->
           <div class="card mb-4">
             <div class="card-body">
-              <h2><i class="fa-solid fa-certificate mr-3"></i>Education</h2>
+              <h2><i class="bi bi-mortarboard-fill yellow mr-3"></i>Education</h2>
               <hr />
 
               <h4 class="mt-3">Master's Degree</h4>
@@ -237,7 +262,7 @@
                 <i class="fa-solid fa-calendar ml-3 pr-2"></i> Oct 2024 -
                 <button class="btn btn-warning px-3 py-0">Current</button>
               </h6>
-              <p>Add accessibilty features for a govrnement web application by following harmonised european and international standard.</p>
+              <p>Add accessibilty features for a govrnement web application by following harmonised european standard.</p>
               <div class="mb-4 ml-2">
                 <button class="btn btn-outline-warning mx-1 mb-1 py-0">Angular</button>
                 <button class="btn btn-outline-warning mx-1 mb-1 py-0">Python</button>
