update linkedin url

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
                 <a href="mailto:florians@mailfence.com">florians@mailfence.com</a>
               </h6>
               <h6>
+                <i class="fa-brands fa-linkedin fa-lg mr-2 mb-2 mb-lg-3 yellow"></i>
+                <a href="https://www.linkedin.com/in/fsimba/" target="_blank">Hire Me</a>
+              </h6>
+              <h6>
                 <i class="fa-solid fa-phone-alt mr-2 mb-2 mb-lg-3"></i>
                 <a href="tel:+33 6 05 79 70 48">+33 6 05 79 70 48</a>
               </h6>
