--- a/portfolio.html
+++ b/portfolio.html
@@ -214,7 +214,7 @@
 
         <div class="row pt-5">
           <div class="col-2-lg col-6-md media_link btn">
-            <a href="https://www.linkedin.com/in/florian-simba-81b6b8150/" target="_blank">
+            <a href="https://www.linkedin.com/in/fsimba/" target="_blank">
               <div class="row">
                 <div class="col-8 d-flex justify-content-start">
                   <h3 class="m-0 pt-2 text-white">LinkedIn</h3>
